# HPCC-Platform

./: .gitignore  .gitmodules  404.html  BUILD_ME.html  CMakeLists.txt  README.html  build-config.h.cmake  can_of_tuna.txt  escargo.txt  hashmap.json  index.html  package-lock.json  package.json  toucansam.txt  trivy-secret.yaml  vcpkg-configuration.json  vcpkg-win.code-workspace
clienttools/install/: CMakeLists.txt  postinst.in  postrm.in  prerm.in
common/: CMakeLists.txt
common/deftype/: CMakeLists.txt
common/dllserver/: CMakeLists.txt  thorplugin.cpp
common/environment/: CMakeLists.txt
common/eventconsumption/: README.html
common/fileview2/: CMakeLists.txt
common/monitoring/: CMakeLists.txt
common/monitoring/prosysinfo/: CMakeLists.txt
common/remote/: CMakeLists.txt  rmtssh.cpp
common/remote/hooks/: CMakeLists.txt
common/roxiecommlib/: CMakeLists.txt
common/thorhelper/: CMakeLists.txt
common/workunit/: CMakeLists.txt
common/wuwebview/: CMakeLists.txt
dali/: CMakeLists.txt
dali/base/: CMakeLists.txt
dali/dafilesrv/: CMakeLists.txt  dafilesrv.cmake  dafilesrv.cpp  dafscontrol.cmake
dali/daliadmin/: CMakeLists.txt
dali/dalidiag/: CMakeLists.txt
dali/dalistop/: CMakeLists.txt
dali/datest/: CMakeLists.txt  datest.cmake  dfuwutest.cmake
dali/daunittest/: CMakeLists.txt
dali/dfu/: CMakeLists.txt  dfuserver.cmake  dfuserver.cpp  dfuwu.cmake
dali/dfuXRefLib/: CMakeLists.txt
dali/dfuplus/: CMakeLists.txt
dali/dfuxref/: CMakeLists.txt
dali/ft/: CMakeLists.txt  dalift.cmake  filecopy.cpp  ftslave.cmake
dali/hellodali/: CMakeLists.txt
dali/sasha/: CMakeLists.txt  saserver.cpp  sasha.html
dali/server/: CMakeLists.txt  daserver.cpp
dali/treeview/: CMakeLists.txt
dali/updtdalienv/: CMakeLists.txt
ecl/hql/: CMakeLists.txt  hql.hpp  hqlexpr.cpp  hqlfold.cpp  hqlgram2.cpp
esp/services/: CMakeLists.txt
esp/services/WsDeploy/: CMakeLists.txt  WsDeployService.cpp  WsDeployService.hpp
esp/services/ecldirect/: CMakeLists.txt
esp/services/esdl_svc_engine/: CMakeLists.txt  esdl_binding.cpp
esp/services/esp_compile_scm/: CMakeLists.txt
esp/services/espcontrol/: CMakeLists.txt
esp/services/ws_access/: CMakeLists.txt
esp/services/ws_account/: CMakeLists.txt
esp/services/ws_config/: CMakeLists.txt
esp/services/ws_dfu/: CMakeLists.txt
esp/services/ws_ecl/: CMakeLists.txt
esp/services/ws_esdlconfig/: CMakeLists.txt
esp/services/ws_fileio/: CMakeLists.txt
esp/services/ws_fs/: CMakeLists.txt
esp/services/ws_logaccess/: WsLogAccessService.cpp  WsLogAccessService.hpp
esp/services/ws_loggingservice/: CMakeLists.txt
esp/services/ws_machine/: CMakeLists.txt  ws_machineService.cpp  ws_machineService.hpp
esp/services/ws_packageprocess/: CMakeLists.txt
esp/services/ws_smc/: CMakeLists.txt
esp/services/ws_sql/: CMakeLists.txt  antlr4cpp.cmake  generateANTLR3c.cmake  ws_sqlService.cpp  ws_sqlService.hpp
esp/services/ws_topology/: CMakeLists.txt
esp/services/ws_workunits/: CMakeLists.txt
etc/HPCC_PROJECT_NAME/: CMakeLists.txt  environment.conf.in  version.in
etc/HPCC_PROJECT_NAME/.ssh/: CMakeLists.txt
etc/HPCC_PROJECT_NAME/configmgr/: esp.xml.in
initfiles/: CMakeLists.txt  DOCUMENTATION.html  DOCUMENTATION.rst
initfiles/bash/: CMakeLists.txt
initfiles/bash/sbin/: CMakeLists.txt  bash_postinst.in
initfiles/componentfiles/: CMakeLists.txt
initfiles/componentfiles/configxml/: CMakeLists.txt  backupnode.xsd  backupnode_vars.xsl  buildsetCC.xml.in  dropzone.xsd.in  eclagent_config.xsd.in  esp.xsd.in  ftslave_linux.xsd.in  roxie.xsd.in  thor.xsd.in
initfiles/componentfiles/ftslave/: CMakeLists.txt  run_ftslave.in
initfiles/componentfiles/launcher/: CMakeLists.txt
initfiles/componentfiles/thor/: CMakeLists.txt  run_thor  start_backupnode.in  start_slaves  start_thor  stop_slaves  stop_thor
initfiles/debian/: changelog
initfiles/etc/: CMakeLists.txt
initfiles/etc/DIR_NAME/: CMakeLists.txt  environment.conf.in  environment.xml.in
initfiles/etc/HPCC_PROJECT_NAME/: CMakeLists.txt  environment.xml.in
initfiles/etc/bash_completion/: CMakeLists.txt
initfiles/etc/init.d/: CMakeLists.txt  dafilesrv.in  (+2 more)
initfiles/packaging/: CMakeLists.txt  postinst.in  postrm.in  prerm.in
initfiles/sbin/: CMakeLists.txt  add_conf_settings.sh.in  alter_confs.sh  backup.sh.in  cluster_script.py  complete-uninstall.sh.in  configmgr.in  deploy-java-files.sh.in  generate-hpccsystems-target.in  hpcc-push.in  hpcc-push.sh.in  hpcc-run.in  hpcc-run.sh.in  hpcc_common.in  hpcc_lock  hpcc_pid  hpcc_setenv.in  init-functions  install-cluster.py  install-cluster.sh.in  keygen.sh.in  prerm.in  regex.awk.in  regex.awk.in.cmake  remote-install-engine.sh.in  rm_conf_settings.sh.in  spark-slave.sh.in  update-keys
initfiles/systemd/: CMakeLists.txt
plugins/cassandra/: CMakeLists.txt
plugins/memcached/: CMakeLists.txt  README.html
plugins/redis/: CMakeLists.txt  README.html
plugins/spark/: CMakeLists.txt
rtl/eclrtl/: CMakeLists.txt
system/aws/: CMakeLists.txt
tools/: CMakeLists.txt
tools/addScopes/: CMakeLists.txt
tools/backupnode/: CMakeLists.txt
tools/combine/: CMakeLists.txt
tools/copyexp/: CMakeLists.txt
tools/dumpkey/: CMakeLists.txt
tools/esdlcmd/: CMakeLists.txt  README.html  esdl-publish.cpp  esdl2ecl.cpp  esdlcmd.cpp  esdlcmd_common.cpp  esdlcmd_core.cpp  esdlcmd_monitor.cpp  esdlcmd_shell.cpp
tools/esdlcmd-xml/: CMakeLists.txt  esdl.cmake
tools/esdlcomp/: CMakeLists.txt  esdllex.l
tools/esp-api/: README.html
tools/fcached/: CMakeLists.txt
tools/genht/: CMakeLists.txt
tools/hidl/: CMakeLists.txt  hidllex.l
tools/initldap/: CMakeLists.txt  initldap.cpp
tools/keydiff/: CMakeLists.txt  keydiff.cmake  keypatch.cmake
tools/pskill/: CMakeLists.txt
tools/pstart/: CMakeLists.txt
tools/roxie/: CONFIG_PROCESSOR_README.html
tools/start-stop-daemon/: CMakeLists.txt
tools/swapnode/: swapnode.cmake  swapnodelib.cmake
tools/tagging/: README.html
tools/testsocket/: CMakeLists.txt
tools/vkey/: CMakeLists.txt
tools/wuget/: CMakeLists.txt
tools/wutool/: CMakeLists.txt
(+2247 files in other folders)
