################################################################################
#    HPCC SYSTEMS software Copyright (C) 2012 HPCC Systems®.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.
################################################################################

add_subdirectory(deftype)
add_subdirectory(dllserver)
add_subdirectory(environment)
add_subdirectory(fileview2)
add_subdirectory(monitoring)
add_subdirectory(remote)
add_subdirectory(roxiecommlib)
add_subdirectory(thorhelper)
add_subdirectory(workunit)
add_subdirectory(wuwebview)
